Fixed bg color problem for footer by wrapping
footer inside div.

--- a/day-1-flexbox/4-flexbox-exercises/4b-mission/begin/css/style.css
+++ b/day-1-flexbox/4-flexbox-exercises/4b-mission/begin/css/style.css
@@ -153,14 +153,22 @@ figcaption a {
 # CSS Styles for 4C-Footer Exercise
 #################################################
 */
-footer {
-    /* max-width: 1167px; */
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 1rem 1rem;
 
+.footer-color {
+    max-width: 1200px;
+    margin: 1rem auto;
+    padding: 0 1rem;
+
+    /* border: 1px solid blueviolet; */ /*For debuggin*/
+}
+footer {
+    padding: 1rem 1rem;
     background-color: var(--color5);
+
     /*
+    Note: Introducing new div in HTML which wraps footer don't requires to 
+    create an border of same color as webpage background color & certain width
+
     We have to use border with this border property to avoid the bg color which is applying
     all over on
     - content
@@ -168,8 +176,12 @@ footer {
     - border
     which we Are setting up one line above.
     To learn what Actually is happening, remove and reapply to see the changes.
-    */
+    
     border: 1rem solid #DBE5DE;
+    border-radius: 30px;
+    */
+
+    /* border: 1px solid red; */ /*For debuggin*/
     border-radius: 30px;
 
     h4 {
@@ -215,7 +227,7 @@ footer ul {
     */
     .missiontext {
         display: flow-root;
-        
+
         p {
             line-height: 2;
         }
@@ -251,8 +263,6 @@ footer ul {
     #################################################
     */
     footer {
-        /* max-width: 1167px; */
-        margin: 0 auto 1rem auto;
         gap: 16%;
     }
 }
